{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 151,
  "lineage": "b0e25c0e-d1e6-cd1d-ba05-d7d06e9d743a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:968225077300:loadbalancer/app/devops-na-nuvem-alb/23015a9aa72694bf",
            "arn_suffix": "app/devops-na-nuvem-alb/23015a9aa72694bf",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-na-nuvem-alb-2058789428.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:968225077300:loadbalancer/app/devops-na-nuvem-alb/23015a9aa72694bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-na-nuvem-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00b109b9dc3b6aa97",
              "sg-0e537737b70bf1cd8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cf00f0da09b30e92"
              },
              {
                "subnet_id": "subnet-0eb9b4eb9b351b458"
              }
            ],
            "subnets": [
              "subnet-0cf00f0da09b30e92",
              "subnet-0eb9b4eb9b351b458"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "youtube-live-eks-cluster-03",
              "ingress.k8s.aws/resource": "LoadBalancer",
              "ingress.k8s.aws/stack": "default/devops-na-nuvem-week-ingress"
            },
            "vpc_id": "vpc-00f7ec349174b9533",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067d62b8140bc5f44",
            "association_id": "eipassoc-0503dbe09c9500596",
            "domain": "vpc",
            "id": "eipalloc-067d62b8140bc5f44",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04d33b5315e7556c9",
            "private_dns": "ip-10-0-0-16.ec2.internal",
            "private_ip": "10.0.0.16",
            "public_dns": "ec2-44-196-182-73.compute-1.amazonaws.com",
            "public_ip": "44.196.182.73",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "youtube-live-nat-gateway-elastic-ip",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-nat-gateway-elastic-ip",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:internet-gateway/igw-04fb3056c9c4d833c",
            "id": "igw-04fb3056c9c4d833c",
            "owner_id": "968225077300",
            "tags": {
              "Name": "youtube-live-internet-gateway",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-internet-gateway",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067d62b8140bc5f44",
            "association_id": "eipassoc-0503dbe09c9500596",
            "connectivity_type": "public",
            "id": "nat-0a6dbf39014c0f32c",
            "network_interface_id": "eni-04d33b5315e7556c9",
            "private_ip": "10.0.0.16",
            "public_ip": "44.196.182.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb9b4eb9b351b458",
            "tags": {
              "Name": "youtube-live-nat-gateway",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-nat-gateway",
              "environment": "Production",
              "project": "youtube-live"
            }
          },
          "dependencies": [
            "aws_eip.this",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:route-table/rtb-043443a3e6c192d9d",
            "id": "rtb-043443a3e6c192d9d",
            "owner_id": "968225077300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6dbf39014c0f32c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "youtube-live-private-route-table",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-private-route-table",
              "environment": "Production",
              "project": "youtube-live"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:route-table/rtb-07cf07a05aad1c65e",
            "id": "rtb-07cf07a05aad1c65e",
            "owner_id": "968225077300",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fb3056c9c4d833c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "youtube-live-public-route-table",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-public-route-table",
              "environment": "Production",
              "project": "youtube-live"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069553570f6dc10ee",
            "route_table_id": "rtb-043443a3e6c192d9d",
            "subnet_id": "subnet-0396afd501ee9ed92"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c50cdda2d97304",
            "route_table_id": "rtb-043443a3e6c192d9d",
            "subnet_id": "subnet-00d36cae1b590e1a2"
          },
          "dependencies": [
            "aws_eip.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bf54f386992e5b2",
            "route_table_id": "rtb-07cf07a05aad1c65e",
            "subnet_id": "subnet-0eb9b4eb9b351b458"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0977a6346067338eb",
            "route_table_id": "rtb-07cf07a05aad1c65e",
            "subnet_id": "subnet-0cf00f0da09b30e92"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:subnet/subnet-0396afd501ee9ed92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0396afd501ee9ed92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "968225077300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "youtube-live-private-subnet-1a",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-private-subnet-1a",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:subnet/subnet-00d36cae1b590e1a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d36cae1b590e1a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "968225077300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "youtube-live-private-subnet-1b",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-private-subnet-1b",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:subnet/subnet-0eb9b4eb9b351b458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb9b4eb9b351b458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968225077300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "youtube-live-public-subnet-1a",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-public-subnet-1a",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:subnet/subnet-0cf00f0da09b30e92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf00f0da09b30e92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968225077300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "youtube-live-public-subnet-1b",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-public-subnet-1b",
              "environment": "Production",
              "project": "youtube-live"
            },
            "vpc_id": "vpc-00f7ec349174b9533"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:968225077300:vpc/vpc-00f7ec349174b9533",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-08da62366013e8b23",
            "default_route_table_id": "rtb-05639be968cd0443b",
            "default_security_group_id": "sg-0a0f5a06566751f40",
            "dhcp_options_id": "dopt-0cce9b60a68ca4ad9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f7ec349174b9533",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05639be968cd0443b",
            "owner_id": "968225077300",
            "tags": {
              "Name": "youtube-live-vpc",
              "environment": "Production",
              "project": "youtube-live"
            },
            "tags_all": {
              "Name": "youtube-live-vpc",
              "environment": "Production",
              "project": "youtube-live"
            }
          }
        }
      ]
    }
  ]
}